# DioxusPractice

./: README.md
dioplayer/: Cargo.toml
dioplayer/src/: main.rs
dx_demo/: Cargo.toml  Dioxus.toml
img_viewer/: Cargo.toml  Dioxus.toml  README.md
img_viewer/assets/: main.css
img_viewer/src/: main.rs
mail_client/: .gitignore  Cargo.toml  Dioxus.toml  login_info.json
mail_client/assets/: main.css
mail_client/src/: main.rs
mail_client/src/components/: composer.rs  email_detail.rs  inbox.rs  layout_resizer.rs  login_page.rs  mod.rs  sidebar.rs
mail_client/src/models/: email.rs  mod.rs
mail_client/src/service/: imap_client.rs  local_storage.rs  mod.rs  smtp_client.rs
